# hep-viz

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml
conda-recipe/: meta.yaml
hep_viz/: __init__.py  cli.py  data_processor.py  server.py
hep_viz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hep_viz/templates/: index.html
tests/: test_basic.py
